# code-review-council

./: .gitignore  AGENTS.md  GETTING_STARTED.md  README.md  SECURITY.md  SELF-REVIEW.md  pyproject.toml
.agent/: PLANS.md
.github/workflows/: council-byok.yml  council-review.yml  pages.yml
council/: __init__.py  chair.py  cli.py  config.py  diff_parser.py  diff_preprocessor.py  doctor.py  gate_zero.py  guidance.py  history.py  llm_transport.py  orchestrator.py  repo_context.py  review_pack.py  schemas.py
council/analyzers/: __init__.py  base.py  ecmascript.py  javascript.py  python.py  registry.py  typescript.py
council/reporters/: __init__.py  github_pr.py  html.py  html_report.py  json_report.py  markdown.py  terminal.py  transport.py
council/reviewers/: __init__.py  architecture.py  base.py  docs.py  qa.py  secops.py
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DESIGN.md  INTEGRITY_POLICY.md  TESTING.md
prompts/: architecture.md  docs.md  qa.md  secops.md
site/: mkdocs.yml
site/docs/: adoption-guide.md  contributing.md  design.md  faq.md  getting-started.md  index.md  overview.md  security.md  self-review.md  workflows.md
site/docs/stylesheets/: extra.css
tests/: conftest.py  test_chair_synthesize.py  test_cli_guidance.py  test_council.py  test_diff_parser.py  test_diff_preprocessor.py  test_doctor_security.py  test_github_reporter.py  test_guidance.py  test_history.py  test_history_cli.py  test_init_scaffold.py  test_llm_transport.py  test_repo_context.py  test_review_pack_support_context.py  test_support_context_prompts.py  test_terminal_reporter.py
(+1 files in other folders)
