[project]
name = "code-review-council"
version = "0.1.0"
description = "Multi-agent LLM code review gate for AI-generated code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.9.0",
    "litellm>=1.50.0",
    "unidiff>=0.7.0",
    "tiktoken>=0.7.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
council = "council.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["council"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
